<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">
    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.musicandfilm.ui.movie.MovieCatalogFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_navigation_main_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.musicandfilm.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.musicandfilm.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_details"
            app:destination="@id/navigation_details" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_event_details"
            app:destination="@id/navigation_details_event" />
    </fragment>
    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.musicandfilm.ui.movie.details.DetailsFragment"
        android:label="@string/title_moviedetail"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_navigation_details_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.musicandfilm.ui.events.EventsFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_events" >
        <action
            android:id="@+id/action_navigation_event_to_navigation_event_details"
            app:destination="@id/navigation_details_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details_event"
        android:name="com.example.musicandfilm.ui.events.details.EventDetailsFragment"
        android:label="@string/title_eventdetail"
        tools:layout="@layout/fragment_event_details" >
    </fragment>
</navigation>