<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@+id/navigation_login">
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.musicandfilm.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_recover"
            app:destination="@id/navigation_recover" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.musicandfilm.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_recover"
        android:name="com.example.musicandfilm.ui.register.RecoverPasswordFragment"
        android:label="@string/title_recover"
        tools:layout="@layout/fragment_recover" >
        <action
            android:id="@+id/action_navigation_recover_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>
</navigation>